Add of integration test : - same vehicle entering twice - entering of different vehicles - process of entering and exiting multiple times
and some correction ensuing the implementation of these tests.

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 
@@ -27,7 +27,7 @@
     <!-- Bibliothèques tierce -->
     <!-- =============================================================== -->
     <dependencies>
-     <!-- ************** Log4J : logger **************** -->
+        <!-- ************** Log4J : logger **************** -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -38,13 +38,13 @@
             <artifactId>log4j-core</artifactId>
             <version>2.12.1</version>
         </dependency>
-    <!-- ************** Connecteur JDBC **************** -->
+        <!-- ************** Connecteur JDBC **************** -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.17</version>
         </dependency>
-    <!-- ************** JUnit 5 **************** -->
+        <!-- ************** JUnit 5 **************** -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -63,7 +63,7 @@
             <version>5.5.1</version>
             <scope>test</scope>
         </dependency>
-    <!-- ************** Mockito **************** -->
+        <!-- ************** Mockito **************** -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
@@ -76,7 +76,7 @@
             <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
-    <!-- ************** Jacoco **************** -->
+        <!-- ************** Jacoco **************** -->
         <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
